sites/all/themes/cas/sass/_main.scss
/* ... */
#block-views-header-slideshow-block
{
	position:relative;
	height:400px;
	width:100%;

	.content
	{
		position: relative;
		z-index: 1;
	}

	.views-row
	{
		position:absolute;
		left:0;
		top:0;
		width:100%;
		z-index:0;

		&.views-row-first
		{
			z-index:1;
		}

		a
		{
			display:block;
		}

		img
		{
			display:block;
			margin:0 auto;
			width:100%;
			height:auto;
		}
	}

	ul#indicators
	{
		position:absolute;
		top:85%;
		left:50%;
		width:200px;
		margin-left:-100px;
		list-style:none;
		z-index:10;
		text-align:center;

		li
		{
			list-style:none;
			margin:0 2px;
			display:inline-block;
			cursor:pointer;
			outline-color:white;
			padding:3px;

			&:before
			{
				content:"";
				display:block;
				width:0;
				height:0;
				border:4px solid rgba(255,255,255,0.4);
				border-radius:4px;
			}

			&.active:before
			{
				border-color:white;
			}
		}
	}
}

#page-title
{
	min-height:125px;
	height:125px;
	position:relative;
	display:table;
	width:100%;

	background:#003e78;
	background:-moz-linear-gradient(top, #003e78 0%, #0053a0 100%);
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#003e78), color-stop(100%,#0053a0));
	background:-webkit-linear-gradient(top, #003e78 0%,#0053a0 100%);
	background:-o-linear-gradient(top, #003e78 0%,#0053a0 100%);
	background:-ms-linear-gradient(top, #003e78 0%,#0053a0 100%);
	background:linear-gradient(to bottom, #003e78 0%,#0053a0 100%);
	filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#003e78', endColorstr='#0053a0',GradientType=0 );

	&:after
	{
		content:"";
		display:block;
		position:absolute;
		left:35px;
		top:100%;
		z-index:2;
		width:0px;
		height:0px;
		border-style:solid;
		border-width:28px 33px 0 33px;
		border-color:#0053a0 transparent transparent transparent;

	}

	h1
	{
		display:table-cell;
		vertical-align:middle;
		color:white;
		line-height:100%;
		text-align:center;
		font-size:3em;
		text-shadow:-3px 3px 3px rgba(0,0,0,0.2);

		span
		{
			vertical-align:middle;
		}

		img
		{
			vertical-align: middle;
			margin-right: 20px;
		}
	}
}

#block-menu-block-2,
#block-views-programs-and-services-menu-bl
{
	background:$orange;
	text-align:center;
	padding:6px 100px;
	text-align:center;

	& > .content > div > div,
	.view-content
	{
		display:table;
		width:100%;
		max-width:740px;
		margin:0 auto;
	}

	& > .content ul,
	.view-content ul
	{
		list-style:none;
		display:table-row;

		li
		{
			list-style:none;
			display:table-cell;
			vertical-align:top;
			padding:4px 10px;
			text-align:center;
			line-height:100%;

			a
			{
				display:block;
				color:white!important;
				text-decoration:none!important;
				font-size:0.9em;

				&:hover
				{
					border-bottom:1px solid white;
					margin-bottom: -1px;
				}
			}
		}
	}
}

#content
{
	background:no-repeat bottom right;

	.region-content
	{
		position:relative;
	}
}

#block-system-main
{
	color:$blue;
	line-height:120%;
	padding:50px 30px;

	a
	{
		color:$orange;
		text-decoration:none;

		&:hover
		{
			text-decoration:underline;
		}
	}

	p, ol, ul
	{
		margin-bottom:0.75em;
	}

	ol, ul
	{
		margin-left:20px;
	}

	h2, h3, h4, h5, h6
	{
		color:black;
	}

	hr
	{
		height:0;
		border:0;
		border-bottom:1px solid $blue;
		width:33.3%;
		margin:0 auto 0.8em auto;
	}

	h2, h3, h4, h5
	{
		margin-bottom:0.5em;
	}
}
body.not-front #block-system-main
{
	width:100%;
	max-width:860px;
	margin:0 auto;
	padding:0;

	& > div
	{
		padding:50px 30px;
	}
}

#block-system-main .view-news-and-events
{
	text-align:center;

	.views-row
	{
		display:inline-block;
		vertical-align:top;
		position:relative;
		width:340px;
		margin:25px;
		z-index:1;

		a
		{
			color:white;
			text-decoration:none;

			&:hover
			{
				text-decoration:underline;
			}
		}

		.views-field
		{
			padding-left:60px;
			font-weight:300;
		}
		.views-field-field-date
		{
			float:left;
			width:45px;
			padding:10px 0 10px 2px;
			background:url(../images/date-bg-dark.png) no-repeat left top;
			line-height:100%;
			font-weight:bold;
			text-align:center;
			color:white;
		}
		.views-field-title
		{
			font-weight:bold;
			text-shadow:1px 1px 1px rgba(0,0,0,0.2);
			text-align:left;
			font-size:1.05em;
			padding-top:8px;
			padding-bottom:6px;

			a
			{
				color:black;

				&:hover
				{
					color:$orange;
				}
			}
		}
		.views-field-body
		{
			font-size:0.85em;
			line-height:110%;
			text-align:left;
		}
		.views-field-path
		{
			text-align:left;
			font-size:0.85em;
			margin-top:12px;

			& > div
			{
				padding-bottom:12px;
				border-bottom:1px solid #6e86c0;
			}

			a
			{
				color:$blue;
				text-decoration:none;

				&:hover
				{
					color:$orange;
					text-decoration:none;
				}
			}
		}
	}
}

#block-system-main .view-news-article
{
	a
	{
		color:$blue;
		text-decoration:underline;

		&:hover
		{
			text-decoration:underline;
		}
	}

	.views-field
	{
		padding-left:60px;
		font-weight:300;
	}
	.views-field-field-date
	{
		float:left;
		width:45px;
		padding:10px 0 10px 2px;
		background:url(../images/date-bg-dark.png) no-repeat left top;
		line-height:100%;
		font-weight:bold;
		text-align:center;
		color:white;
	}
	.views-field-title
	{
		font-weight:bold;
		text-shadow:1px 1px 1px rgba(0,0,0,0.2);
		text-align:left;
		padding-top:8px;
		padding-bottom:20px;
		color:black;

		h2
		{
			font-size:3em;
			line-height:0.8em;
		}
	}
	.views-field-body
	{
		font-size:0.85em;
		line-height:110%;
		text-align:left;
	}
	.views-field-nothing
	{
		font-size:0.85em;
	}
}

.view-programs-and-services
{
	h2
	{
		margin-bottom:15px;
	}

	.views-row
	{
		position:relative;
		padding:20px 0 30px 0;

		&:after
		{
			content:"";
			display:block;
			width:50%;
			max-width:275px;
			margin:0 auto;
			border-bottom:1px solid #6e86c0;
			position:relative;
			top:20px;
		}

		&.views-row-last:after
		{
			display:none;
		}
	}
}
/* ... */

